// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`notes delete note w/children 1`] = `
Array [
  "foo.ch1.md",
  "foo.schema.yml",
  "root.md",
  "root.schema.yml",
]
`;

exports[`notes getNoteByPath get root 1`] = `
Object {
  "data": Object {
    "changed": Array [],
    "note": Object {
      "body": "
",
      "children": Array [
        "foo",
      ],
      "created": "1",
      "custom": Object {},
      "data": Object {},
      "desc": "",
      "fname": "root",
      "id": "f9c1bd1d-0e1a-4b28-925a-d86defa7b52e",
      "links": Array [],
      "parent": null,
      "title": "Root",
      "type": "note",
      "updated": "1",
      "vault": Object {
        "fsPath": "/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-62148-xv14KrnGWPZ2/vault",
      },
    },
  },
  "error": null,
}
`;

exports[`notes query query child note with schema 1`] = `
Object {
  "data": Array [
    Object {
      "body": "
",
      "children": Array [],
      "created": "1",
      "custom": Object {},
      "data": Object {},
      "desc": "",
      "fname": "foo.ch1",
      "id": "foo.ch1",
      "links": Array [],
      "parent": "foo",
      "schema": Object {
        "moduleId": "foo",
        "schemaId": "ch1",
      },
      "title": "Ch1",
      "type": "note",
      "updated": "1",
      "vault": Object {
        "fsPath": "/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-62148-PEarrP5dwDWY/vault",
      },
    },
    Object {
      "body": "
",
      "children": Array [
        "foo.ch1",
      ],
      "created": "1",
      "custom": Object {},
      "data": Object {},
      "desc": "",
      "fname": "foo",
      "id": "foo",
      "links": Array [],
      "parent": "edf08116-e9a1-431f-94e8-e3453b0a47ff",
      "schema": Object {
        "moduleId": "foo",
        "schemaId": "foo",
      },
      "title": "Foo",
      "type": "note",
      "updated": "1",
      "vault": Object {
        "fsPath": "/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-62148-PEarrP5dwDWY/vault",
      },
    },
  ],
  "error": null,
}
`;

exports[`notes query query root note with schema 1`] = `
Object {
  "data": Array [
    Object {
      "body": "
",
      "children": Array [
        "foo.ch1",
      ],
      "created": "1",
      "custom": Object {},
      "data": Object {},
      "desc": "",
      "fname": "foo",
      "id": "foo",
      "links": Array [],
      "parent": "87883ec9-82e2-4cb8-97b8-2edf90ac32e8",
      "schema": Object {
        "moduleId": "foo",
        "schemaId": "foo",
      },
      "title": "Foo",
      "type": "note",
      "updated": "1",
      "vault": Object {
        "fsPath": "/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-62148-DMcqj3GFzYCq/vault",
      },
    },
    Object {
      "body": "
",
      "children": Array [],
      "created": "1",
      "custom": Object {},
      "data": Object {},
      "desc": "",
      "fname": "foo.ch1",
      "id": "foo.ch1",
      "links": Array [],
      "parent": "foo",
      "schema": Object {
        "moduleId": "foo",
        "schemaId": "ch1",
      },
      "title": "Ch1",
      "type": "note",
      "updated": "1",
      "vault": Object {
        "fsPath": "/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-62148-DMcqj3GFzYCq/vault",
      },
    },
    Object {
      "body": "
",
      "children": Array [
        "foo",
      ],
      "created": "1",
      "custom": Object {},
      "data": Object {},
      "desc": "",
      "fname": "root",
      "id": "87883ec9-82e2-4cb8-97b8-2edf90ac32e8",
      "links": Array [],
      "parent": null,
      "title": "Root",
      "type": "note",
      "updated": "1",
      "vault": Object {
        "fsPath": "/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-62148-DMcqj3GFzYCq/vault",
      },
    },
  ],
  "error": null,
}
`;

exports[`notes query query root: root note 1`] = `
Object {
  "data": Array [
    Object {
      "body": "
",
      "children": Array [
        "foo",
      ],
      "created": "1",
      "custom": Object {},
      "data": Object {},
      "desc": "",
      "fname": "root",
      "id": "997dd897-fc61-444e-a3f1-3aac4da26d52",
      "links": Array [],
      "parent": null,
      "title": "Root",
      "type": "note",
      "updated": "1",
      "vault": Object {
        "fsPath": "/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-62148-LqQTwJhpGKMt/vault",
      },
    },
  ],
  "error": null,
}
`;

exports[`notes rename/ basic 1`] = `
Object {
  "data": Array [
    Object {
      "note": Object {
        "body": "[[baz]]

",
        "children": Array [],
        "created": "1",
        "custom": Object {},
        "data": Object {},
        "desc": "",
        "fname": "bar",
        "id": "bar",
        "links": Array [
          Object {
            "alias": "baz",
            "from": Object {
              "fname": "bar",
              "id": "bar",
            },
            "original": "baz",
            "pos": Object {
              "end": 7,
              "start": 0,
            },
            "to": Object {
              "fname": "baz",
            },
            "type": "wiki",
            "value": "baz",
          },
        ],
        "parent": "4526bcea-180e-44e9-9823-21258a2f90df",
        "title": "Bar",
        "type": "note",
        "updated": "1",
        "vault": Object {
          "fsPath": "/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-62148-HHl8uCChEpSz/vault",
        },
      },
      "status": "update",
    },
    Object {
      "note": Object {
        "body": "[[bar]]
",
        "children": Array [
          "foo.ch1",
        ],
        "created": "1",
        "custom": Object {},
        "data": Object {},
        "desc": "",
        "fname": "foo",
        "id": "foo",
        "links": Array [],
        "parent": "4526bcea-180e-44e9-9823-21258a2f90df",
        "title": "Foo",
        "type": "note",
        "updated": "1",
        "vault": Object {
          "fsPath": "/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-62148-HHl8uCChEpSz/vault",
        },
      },
      "status": "delete",
    },
    Object {
      "note": Object {
        "body": "[[bar]]
",
        "children": Array [
          "foo.ch1",
        ],
        "created": "1",
        "custom": Object {},
        "data": Object {},
        "desc": "",
        "fname": "baz",
        "id": "foo",
        "links": Array [],
        "parent": "4526bcea-180e-44e9-9823-21258a2f90df",
        "title": "Foo",
        "type": "note",
        "updated": "1",
        "vault": Object {
          "fsPath": "/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-62148-HHl8uCChEpSz/vault",
        },
      },
      "status": "create",
    },
  ],
  "error": null,
}
`;

exports[`notes rename/ basic 2`] = `
Array [
  "bar.md",
  "baz.md",
  "foo.ch1.md",
  "foo.schema.yml",
  "root.md",
  "root.schema.yml",
]
`;

exports[`notes rename/ domain with no children, update exsiting node: changed 1`] = `
Array [
  Object {
    "note": Object {
      "body": "[[gamma]]

",
      "children": Array [],
      "created": "1",
      "data": Object {},
      "desc": "",
      "fname": "alpha",
      "id": "alpha",
      "links": Array [
        Object {
          "alias": "gamma",
          "from": Object {
            "fname": "alpha",
            "id": "alpha",
          },
          "original": "gamma",
          "pos": Object {
            "end": 9,
            "start": 0,
          },
          "to": Object {
            "fname": "gamma",
          },
          "type": "wiki",
          "value": "gamma",
        },
      ],
      "parent": "612e667b-bedb-44cc-a063-fc6576843881",
      "title": "Alpha",
      "type": "note",
      "updated": "1",
      "vault": Object {
        "fsPath": "/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-62148-sFr7FG1qzKrh/vault",
      },
    },
    "status": "update",
  },
  Object {
    "note": Object {
      "body": "[[alpha]]
",
      "children": Array [],
      "created": "1",
      "custom": Object {},
      "data": Object {},
      "desc": "",
      "fname": "beta",
      "id": "beta",
      "links": Array [],
      "parent": "612e667b-bedb-44cc-a063-fc6576843881",
      "title": "Beta",
      "type": "note",
      "updated": "1",
      "vault": Object {
        "fsPath": "/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-62148-sFr7FG1qzKrh/vault",
      },
    },
    "status": "delete",
  },
  Object {
    "note": Object {
      "body": "[[alpha]]
",
      "children": Array [],
      "created": "1",
      "custom": Object {},
      "data": Object {},
      "desc": "",
      "fname": "gamma",
      "id": "beta",
      "links": Array [],
      "parent": "612e667b-bedb-44cc-a063-fc6576843881",
      "title": "Beta",
      "type": "note",
      "updated": "1",
      "vault": Object {
        "fsPath": "/var/folders/65/c9lrx0tx6k7b_zlb4v1bs2rr0000gn/T/tmp-62148-sFr7FG1qzKrh/vault",
      },
    },
    "status": "create",
  },
]
`;

exports[`schema write simple schema 1`] = `
"version: 1
imports: []
schemas:
  - id: pro
    children: []
    title: pro
    parent: root
"
`;
